Fixed leaderboard overflow by trimming player submitted names. Added path from main menu to leaderboard. Started "how-to-play" section.

--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,21 @@ body {
   clip-path: polygon(0 0, calc(100% - 20px) 0, 100% 20px, 100% 100%, 20px 100%, 0 calc(100% - 20px)); */
 }
 
+.game-mode-extra-info {
+  font-size: 1rem;
+  color: white;
+  text-align: center;
+  /* Text Stroke */
+  text-shadow: rgb(0, 0, 0) 3px 0px 0px, rgb(0, 0, 0) 2.83487px 0.981584px 0px, rgb(0, 0, 0) 2.35766px 1.85511px 0px,
+    rgb(0, 0, 0) 1.62091px 2.52441px 0px, rgb(0, 0, 0) 0.705713px 2.91581px 0px, rgb(0, 0, 0) -0.287171px 2.98622px 0px,
+    rgb(0, 0, 0) -1.24844px 2.72789px 0px, rgb(0, 0, 0) -2.07227px 2.16926px 0px, rgb(0, 0, 0) -2.66798px 1.37182px 0px,
+    rgb(0, 0, 0) -2.96998px 0.42336px 0px, rgb(0, 0, 0) -2.94502px -0.571704px 0px,
+    rgb(0, 0, 0) -2.59586px -1.50383px 0px, rgb(0, 0, 0) -1.96093px -2.27041px 0px,
+    rgb(0, 0, 0) -1.11013px -2.78704px 0px, rgb(0, 0, 0) -0.137119px -2.99686px 0px,
+    rgb(0, 0, 0) 0.850987px -2.87677px 0px, rgb(0, 0, 0) 1.74541px -2.43999px 0px, rgb(0, 0, 0) 2.44769px -1.73459px 0px,
+    rgb(0, 0, 0) 2.88051px -0.838247px 0px;
+}
+
 .active-game-mode {
   outline: 8px solid black;
   background-color: #249eea;
@@ -182,6 +197,14 @@ body {
   animation: moveUpAndFade 2s ease-out forwards;
 }
 
+.how-to-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  margin-block: 2rem;
+  margin-inline: auto;
+}
+
 .game-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -205,7 +228,15 @@ body {
   border-bottom: 3px solid white;
 }
 
+.leaderboard-container {
+  max-width: 100vw;
+}
+
 /* Utility Classes */
+
+.margin-btm-2 {
+  margin-bottom: 2rem;
+}
 
 .max-width-390 {
   max-width: 390px;
@@ -310,6 +341,10 @@ body {
   font-size: 2rem;
 }
 
+.game-subtitle-s {
+  font-size: 1.75rem;
+}
+
 .settings-list {
   display: flex;
   /* flex-direction: column; */
@@ -372,6 +407,7 @@ body {
     min-width: 358px;
     align-items: center;
     justify-content: start;
+    max-width: 400px;
   }
 
   .gap-2 {
@@ -383,5 +419,18 @@ body {
 
   .game-grid {
     margin-top: 2rem;
+  }
+
+  .how-to-grid {
+    max-width: 300px;
+  }
+}
+
+@media (max-width: 380px) {
+  .leaderboard-container {
+    width: 100%;
+  }
+  .game-subtitle-s {
+    font-size: 1.35rem;
   }
 }
